--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@emotion/styled": "^11.9.3",
     "firebase": "^9.9.0",
     "framer-motion": "^5",
-    "next": "12.0.10",
+    "next": "^12.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
