--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "emoji-picker-react": "^3.6.1",
     "firebase": "^9.9.0",
     "framer-motion": "^5",
     "next": "^12.2.3",
