--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10"
   }
