--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.34.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
